--- a/index.html
+++ b/index.html
@@ -957,9 +957,9 @@
                         <div id="text_block-45-10" class="ct-text-block text25">THE BRETTIFIED VERSION OF BATMAN</div>
                         <div id="div_block-46-10" class="ct-div-block"><a id="link_button-47-10"
                                 class="ct-link-button text20"
-                                href="https://www.movepump.com"
+                                href="https://movepump.com/token/0xcdfffe45aaeaa428545b8259f69b1d5298798f485e10fd436e73b3c2e119960b::brettman::BRETTMAN"
                                 target="_blank">Buy Now</a><a id="link_button-48-10" class="ct-link-button text20"
-                                href="https://www.movepump.com/"
+                                href="https://movepump.com/token/0xcdfffe45aaeaa428545b8259f69b1d5298798f485e10fd436e73b3c2e119960b::brettman::BRETTMAN/"
                                 target="_blank">Movepump</a></div>
                         <div id="div_block-50-10" class="ct-div-block">
                             <div id="testingdiv" class="ct-div-block"><img id="image-52-10" alt=""
