--- a/index.html
+++ b/index.html
@@ -939,11 +939,11 @@
                     <div id="div_block-8-10" class="ct-div-block border">
                         <div id="div_block-11-10" class="ct-div-block">
                             <div id="div_block-13-10" class="ct-div-block iconbox"><a id="link-217-10" class="ct-link"
-                                    href="https://t.me/brettmansui" target="_blank"><img id="image-150-10" alt=""
+                                    href="https://t.me/brettmanxrp" target="_blank"><img id="image-150-10" alt=""
                                         src="images/svgviewer-output-1.svg" class="ct-image" srcset=""
                                         sizes="(max-width: 25px) 100vw, 25px"></a></div>
                             <div id="div_block-19-10" class="ct-div-block iconbox"><a id="link-224-10" class="ct-link"
-                                    href="https://x.com/brettmansui" target="_blank"><img id="image-152-10" alt=""
+                                    href="https://x.com/brettmanxrp" target="_blank"><img id="image-152-10" alt=""
                                         src="images/svgviewer-output-2.svg" class="ct-image" srcset=""
                                         sizes="(max-width: 25px) 100vw, 25px"></a></div>
                             
@@ -1008,9 +1008,9 @@
                             groups, and get your Brettman coins today to start your heroic journey! Be a hero. Be
                             Brettman.</div>
                         <div id="div_block-137-10" class="ct-div-block"><a id="link_button-138-10"
-                                class="ct-link-button text20" href="https://t.me/brettmansui"
+                                class="ct-link-button text20" href="https://t.me/brettmanxrp"
                                 target="_blank">Telegram</a><a id="link_button-140-10" class="ct-link-button text20"
-                                href="https://x.com/brettmansui" target="_blank">Twitter</a></div>
+                                href="https://x.com/brettmanxrp" target="_blank">Twitter</a></div>
                     </div>
                     <div id="div_block-131-10" class="ct-div-block"><img id="image-132-10" alt=""
                             src="images/pikaso_reimagine_digital-painting-A-cartoon-depiction-of-the-Batman__2_-removebg-preview.png"
@@ -1059,11 +1059,11 @@
                         </div>
                         <div id="div_block-175-10" class="ct-div-block">
                             <div id="div_block-176-10" class="ct-div-block iconbox"><a id="link-221-10" class="ct-link"
-                                    href="https://t.me/brettmansui" target="_blank"><img id="image-177-10" alt=""
+                                    href="https://t.me/brettmanxrp" target="_blank"><img id="image-177-10" alt=""
                                         src="images/svgviewer-output-1.svg" class="ct-image" srcset=""
                                         sizes="(max-width: 25px) 100vw, 25px"></a></div>
                             <div id="div_block-178-10" class="ct-div-block iconbox"><a id="link-222-10" class="ct-link"
-                                    href="https://x.com/brettmansui" target="_blank"><img id="image-179-10" alt=""
+                                    href="https://x.com/brettmanxrp" target="_blank"><img id="image-179-10" alt=""
                                         src="images/svgviewer-output-2.svg" class="ct-image" srcset=""
                                         sizes="(max-width: 25px) 100vw, 25px"></a></div>
                             
